syntax = "proto3";

package user;

option go_package = "./proto";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
}

message User {
  string name = 1;
  string email = 2;
  string role = 3;
}

message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterUserResponse {
  User user = 1;
}

message AuthenticateUserRequest {
  string email = 1;
  string password = 2;
}

message AuthenticateUserResponse {
  string token = 1;
}

message GetUserProfileRequest {
  string email = 1;
}

message GetUserProfileResponse {
  User user = 1;
}

message UpdateUserProfileRequest {
  string name = 1;
  string email = 2;
}

message UpdateUserProfileResponse {
  User user = 1;
}
